# scotty-story-board

./: .gitignore  LICENSE  Procfile  README.md  scotty-story-board.cabal  stack.yaml
.circleci/: config.yml
app/: App.hs  AppContext.hs  Auth.hs  Index.hs  Main.hs  Session.hs  Util.hs
app/controllers/: AuthorizationController.hs  IndexController.hs  ProjectsController.hs  UsersController.hs
app/exceptions/: SQLExceptions.hs
app/models/: OAuthLogin.hs  Project.hs  User.hs
app/view/: Index.hs
app/views/: AuthViews.hs  ErrorViews.hs  Index.hs  IndexViews.hs  Layouts.hs  Project.hs  ProjectViews.hs  UserViews.hs
config/: development.env.example  production.env  test.env
db/: Migrate.hs
db/migrations/: 20170702121509_add_project.sql  20170719183906_add_user.sql  20170721131916_add_oauth_login.sql  20170728132607_add_email_to_user.sql  20170728164046_add_projects_users.sql
lib/: AppContext.hs  GithubOAuth.hs  OpaleyeUtils.hs
test/: AppSpec.hs  Helpers.hs  IndexSpec.hs  SessionSpec.hs  Spec.hs
test/controllers/: IndexControllerSpec.hs  ProjectsControllerSpec.hs  UsersControllerSpec.hs
test/models/: OAuthLoginSpec.hs  ProjectSpec.hs  UserSpec.hs
