name:                scotty-story-board
version:             0.1.0.0
homepage:            https://github.com/robertjlooby/scotty-story-board
license:             MIT
license-file:        LICENSE
author:              Robert J. Looby
maintainer:          robertjlooby@gmail.com
copyright:           2017 Robert J. Looby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable migrate
  hs-source-dirs:      db
  main-is:             Migrate.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , postgresql-simple
                     , postgresql-simple-migration
  default-language:    Haskell2010

executable web
  hs-source-dirs:      app
                     , app/models
                     , app/views
  main-is:             Main.hs
  other-modules:       App
                     , IndexViews
                     , Layouts
                     , Project
                     , ProjectViews
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , bytestring
                     , http-types
                     , postgresql-simple
                     , scotty
                     , text
                     , wai-middleware-static
                     , wai-extra
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , app
                     , app/models
                     , app/views
                     , test/models
  main-is:             Spec.hs
  other-modules:       App
                     , AppSpec
                     , IndexViews
                     , Layouts
                     , Project
                     , ProjectSpec
                     , ProjectViews
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , bytestring
                     , hspec
                     , hspec-wai
                     , http-types
                     , postgresql-simple
                     , postgresql-simple-migration
                     , scotty
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/scotty-story-board
